# ChangeLog for dev-java/saxon
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/saxon/ChangeLog,v 1.45 2014/08/10 20:23:18 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> saxon-6.5.5.ebuild,
  saxon-8.4b-r3.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  09 Dec 2012; Agostino Sarubbo <ago@gentoo.org> saxon-9.2.0.6.ebuild:
  Stable for ppc64, wrt bug #421733

  10 Oct 2012;  <naota@gentoo.org> saxon-9.2.0.6.ebuild:
  Add ~x86-fbsd wrt bug #421733

  10 Oct 2012;  <naota@gentoo.org> saxon-9.2.0.6.ebuild:
  Add ~x86-fbsd wrt bug #421733

  22 Aug 2012; Michael Weber <xmw@gentoo.org> saxon-9.2.0.6.ebuild:
  ppc stable (bug 414381).

  07 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> saxon-9.2.0.6.ebuild:
  x86 stable wrt bug #414381

  02 May 2012; Agostino Sarubbo <ago@gentoo.org> saxon-9.2.0.6.ebuild:
  Stable for amd64, wrt bug #414381

  28 Mar 2010; Vlastimil Babka <caster@gentoo.org> saxon-8.4b-r3.ebuild,
  saxon-9.2.0.6.ebuild:
  Shut repoman up.

*saxon-9.2.0.6 (28 Mar 2010)

  28 Mar 2010; Vlastimil Babka <caster@gentoo.org> +files/9.2-build.xml,
  -files/build-6.5.2.xml, +files/9.2-edition.properties,
  +saxon-9.2.0.6.ebuild:
  Version bump, fixes bug #130568. Thanks to Juan J. García de Soria,
  Michael Jinks and Hanno Meyer-Thurow.

  17 Jun 2007; William L. Thomson Jr. <wltjr@gentoo.org> saxon-6.5.5.ebuild:
  Stable on amd64, bug #180572. Removed older version

  04 Jun 2007; Christian Faulhammer <opfer@gentoo.org> saxon-6.5.5.ebuild:
  stable x86, bug 180572

  01 Jun 2007; nixnut <nixnut@gentoo.org> saxon-6.5.5.ebuild:
  Stable on ppc wrt bug 180572

  01 Jun 2007; Vlastimil Babka <caster@gentoo.org> saxon-6.5.5.ebuild,
  -saxon-8.4b-r2.ebuild, saxon-8.4b-r3.ebuild:
  Add examples useflag for bug #176681. Remove unused revision.

  05 May 2007; Vlastimil Babka <caster@gentoo.org> saxon-8.4b-r3.ebuild:
  Move -i in cp to front.
