@@ -11,13 +11,25 @@ DIST saxonb8-4.zip 7266831 SHA256 c47f0f88c765d246a3e6666228db050fba5089bc8eff42
 DIST saxonhe9-2-0-6source.zip 2942625 SHA256 4f15659cf8bb537b4b20f63cf060bf56f39453ab520fa912b2e9fe87e90a972e SHA512 6c59c0cbed905cf561387acb54bb31f0a251432deb0edf498ec4f4d9955bbcc12d1765ace594090d3ccb0416e3e72349466e430bb4f799b51fd12ce8fc5a144e WHIRLPOOL ca1b5b8f2f70eb72259b8128606830adebc6f6eed8c5c6ff9f222a672556ff8f73219960758480366004b656100e017bfdebad7f4dc60afc9cb3ab6793fa9364
 EBUILD saxon-6.5.5.ebuild 1321 SHA256 4fa3a20be18c155c13ae92ba163dd0988d9c3870baa05bc729e000688741097e SHA512 701e94f9cba4d05a478d6c1603157d40e9628a91d74f0d0223f62b901f8af7f847843255aab99c0947cf2c70650271058d221f1c16e1ed708eefb5f0918bbc36 WHIRLPOOL aaa727ac03847f01d40dce3ac7b10e5aeafe1f5713eb3bd89b71ca515c58829a17a2216158abf934926e6e1543afaf944ced871b0bff6ba0edc180c5714835ba
 EBUILD saxon-8.4b-r3.ebuild 1582 SHA256 65b07020ca6bdde67de404df9bb5e4b13b507102bef90ca690c62832c47c0f0a SHA512 d41f2fcc049dcda258f96b567d0782c7c81c8dd8f344d754ace1cebe0025db636baff34a71800c6af725ad6f82e0fea17e592c48a056a32f1d6b11bb584aa26f WHIRLPOOL 195a10463150a3d9ee5fed9b555e95536cc6dabb4a019835d35373c04cc8a3c85d40f3e853d240a4f8c8f7732a1009c4a598c427cfafa6ee04baf9be99ca2722
-EBUILD saxon-9.2.0.6.ebuild 2307 SHA256 8bfe271d379d00286a44fa50443938911a60f21966909d44e3bec62f656e3a85 SHA512 9783ca6362cc1284d21d83097e8993892681279fffd45cfb282b2362168d8ff71b56a58ac0a39ab9cca8498802f0f090f273528793d44b1bf87ee5eb96ace6ca WHIRLPOOL bcdf96dcac0b3c3551387b0bb1a6ce37a71caf31fe2f8fd82b14d65b5f6ac77e8479002b9479fef787e87a62f489891aebd7eb0b839568e85c653540220d630a
-MISC ChangeLog 5049 SHA256 2d9b329e64d4013c630a2be20d6ab0de0047540ff5344c392a2e3e4c00329b80 SHA512 cc6bf824a0dc454b1b53a435a39f6b9c65456489315681587216e0c4a51b5b545b1c0b4e54057d93dba81a2f8bf979862109cd97b3f5607b20557e7e3516a609 WHIRLPOOL b86f40cb43071fd2f894930889b41496a6115eff9d34c8d1f8dc06f4f0d298c4d6373e2641e643df81bb3122f4c3cc562d681ff608f5254138d7921d93fc4a19
+EBUILD saxon-9.2.0.6.ebuild 2314 SHA256 65b7b6af8fd08c14777a248090a92207e4fb1df4b28a2d063981f0196fe48cfa SHA512 a35f6d7dda8fc30b7d1978294932e1e1095b3f08fec4df1c36b3168d9e453ac5e1bd28574bc0cbc7e7c336426fcd17fcd09d25b8d83ad62e722e058cc1bef321 WHIRLPOOL eb75ec8fae4d3ece8eccd9883e15cfe06203a4a4fbd7b8ea2ec0988bbb806f7ba6d4cf6dc8f60849723bf5242e83833a0f9bcc68b5da2a8852746e6f23e8aac5
+MISC ChangeLog 5144 SHA256 cba921595f5b1ad1735ff6e3179c4df61868527f29bb04f2d7bfd203d666d60d SHA512 b9d3bd506fa7227ddc5860928b9c51a83dfd798dfc47222ec3e4063dfd2feeb5f26a2b2a1224800bf2cb1669fa1f245989306a4555f8e5faf272392ec06e0f38 WHIRLPOOL 52848f051444e63bd7961af2754bc74fc47f02a3a3b6547e66ae3897ea2dd1ddb697dc2b7a22d3eacbbd0ca30f3977febe475e2a05f6a39dd368b868015e9520
 MISC metadata.xml 157 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 SHA512 bbae663e26f48fdc5e272adc2b06c14f77f34c53caf84acb53908ff036e7c12a3edbbc0929d2db56bee861a453381d979c7e0983a23716f629ed2135c22ffece WHIRLPOOL 887e153e2481e7d76f0f1b67a395f10f0328b93930185ecdb8fcb5fe3c50f839086a18831d61cf45b34657aaffca6c3b7900cf3c04b712846a05027a84602448
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlPn1LcACgkQcaHudmEf86rrzACeOdBxrt7+gXMr8CoOzczmhnOo
-ueAAn07tHxuuO/8eZJ1vpnEtVof12Jxe
-=oPEj
+iQJ8BAEBCABmBQJVXvTuXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1MjhERTZCRDg2OTFBNDM5MUZEQTJFRDQy
+MUM2MzIxMjlDNkQ3REU0AAoJECHGMhKcbX3kpogQAJNIHvy4pwZJMxshuYhEsbfj
+CvQcUBlFwOFqQ7rFv56aRdDPo8RG/B8Zg2nipLRVeHO8tOHM3rVCov3Ebkh6rrWn
+F+S331goZxv81pgH3XrxBpji/QbryTRTFsXR8N0Nt7Eb5KPOBkWJ9mZQfvVnwj/M
+ddugCPg3gNJpVZJ28PtWWaRbEQjj0U0/sp+1QeLgnMupJi0MSDSMgBbevOlivK7q
+Cvd58YM6uW84HC5d+82mhq7o9EbOlXZG+fl/iibq9lWfwjy7mQy6x48YFEN7PGmP
+i6CN7kX7yvAwXocmykCac5AvVpcDIvU4cXd/S8rqu3MoRTNHa2ODPqczpJpderrF
+6d/IWLB7RT5d9NHqU+AuupCEHhHEL5qoxwAlvATupOR/mEcQYSqQF1WUVEgEwUdz
+soDqsmCqqCeVxzVfGl6pyyOgMGk6XAMszcd28S89AZleCLyj0Rb5XO4crrov1MAQ
+oDYjbchl38udlvUs2komyszEzgp6kbYyEuobvgUQwEdoT6OS/6x94KDcwmCIF709
+ps59McQoTVJtnrzVMVMhRM9fm83d8zkOCdywCyc9GOGyl89pfndFqPWTHk3zcd/J
+8Qc0llRxP2sdLjAZ1TqFSUF1GgKTVSw6XEemFsazzuPfd6L1hRKno43PDltZAiDZ
+OQ9CNX5L6sizu1is078f
+=YdNF
 -----END PGP SIGNATURE-----
